# mattermost-mcp-host

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALLATION.md  README.md  W3.md  pyproject.toml
mattermost-mcp-server/: README.md
mattermost-mcp-server/src/mattermost_mcp_server/: server.py
src/mattermost_mcp_client/: config.py  demo_client.py  main.py  mattermost_client.py
src/mattermost_mcp_host/: config.py  demo_client.py  llm_clients.py  main.py  mcp-servers.json  mcp_client.py
src/mattermost_mcp_host/agent/: llm_agent.py  utils.py
utils/: mcp_tool_caller.py
