[project]
name = "mattermost-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.13",
    "mattermost>=6.5.0",
    "mattermostdriver>=7.3.2",
    "mcp[cli]>=1.3.0",
    "nest-asyncio>=1.6.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
]
